--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -115,6 +115,8 @@ extends:
                   .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-serialization-text -Version $(PACKAGE_VERSION)
                   .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-serialization-multipart -Version $(PACKAGE_VERSION)
                   .\scripts\zipPackageContent.ps1 -OutputDirectory $Env:OUTPUT_DIRECTORY -ArtifactId microsoft-kiota-bundle -Version $(PACKAGE_VERSION)
+                  echo "list of zips:"
+                  Get-ChildItem -Path $Env:OUTPUT_DIRECTORY -Filter "*.zip" | ForEach-Object { Write-Host $_.FullName }
                 displayName: Zip contents of local Maven cache
                 env:
                   OUTPUT_DIRECTORY: $(Build.ArtifactStagingDirectory)
@@ -182,3 +184,35 @@ extends:
                           $(Pipeline.Workspace)/**/*
                         addChangeLog: false
             
+          # - deployment: deploy_npm
+          #   # condition: and(contains(variables['build.sourceBranch'], 'refs/tags/v'), succeeded())
+          #   pool:
+          #     name: Azure-Pipelines-1ESPT-ExDShared
+          #     os: linux
+          #     image: ubuntu-latest
+          #   templateContext:
+          #     type: releaseJob
+          #     isProduction: true
+          #     inputs:
+          #       - input: pipelineArtifact
+          #         artifactName: jars
+          #         targetPath: "$(Pipeline.Workspace)"
+          #   dependsOn: []
+          #   steps:
+          #     - task: EsrpRelease@7
+          #       inputs:
+          #         connectedservicename: "Federated DevX ESRP Managed Identity Connection"
+          #         keyvaultname: "akv-prod-eastus"
+          #         authcertname: "ReferenceLibraryPrivateCert"
+          #         signcertname: "ReferencePackagePublisherCertificate"
+          #         clientid: "65035b7f-7357-4f29-bf25-c5ee5c3949f8"
+          #         intent: "PackageDistribution"
+          #         contenttype: "npm"
+          #         contentsource: "Folder"
+          #         folderlocation: "$(Pipeline.Workspace)/npm-package/"
+          #         waitforreleasecompletion: true
+          #         owners: $(NPM_OWNERS_LIST)
+          #         approvers: $(NPM_APPROVERS_LIST)
+          #         serviceendpointurl: "https://api.esrp.microsoft.com"
+          #         mainpublisher: "ESRPRELPACMAN"
+          #         domaintenantid: "cdc5aeea-15c5-4db6-b079-fcadd2505dc2"
