--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -184,35 +184,35 @@ extends:
                           $(Pipeline.Workspace)/**/*
                         addChangeLog: false
             
-          # - deployment: deploy_npm
-          #   # condition: and(contains(variables['build.sourceBranch'], 'refs/tags/v'), succeeded())
-          #   pool:
-          #     name: Azure-Pipelines-1ESPT-ExDShared
-          #     os: linux
-          #     image: ubuntu-latest
-          #   templateContext:
-          #     type: releaseJob
-          #     isProduction: true
-          #     inputs:
-          #       - input: pipelineArtifact
-          #         artifactName: jars
-          #         targetPath: "$(Pipeline.Workspace)"
-          #   dependsOn: []
-          #   steps:
-          #     - task: EsrpRelease@7
-          #       inputs:
-          #         connectedservicename: "Federated DevX ESRP Managed Identity Connection"
-          #         keyvaultname: "akv-prod-eastus"
-          #         authcertname: "ReferenceLibraryPrivateCert"
-          #         signcertname: "ReferencePackagePublisherCertificate"
-          #         clientid: "65035b7f-7357-4f29-bf25-c5ee5c3949f8"
-          #         intent: "PackageDistribution"
-          #         contenttype: "npm"
-          #         contentsource: "Folder"
-          #         folderlocation: "$(Pipeline.Workspace)/npm-package/"
-          #         waitforreleasecompletion: true
-          #         owners: $(NPM_OWNERS_LIST)
-          #         approvers: $(NPM_APPROVERS_LIST)
-          #         serviceendpointurl: "https://api.esrp.microsoft.com"
-          #         mainpublisher: "ESRPRELPACMAN"
-          #         domaintenantid: "cdc5aeea-15c5-4db6-b079-fcadd2505dc2"
+          - deployment: deploy_npm
+            # condition: and(contains(variables['build.sourceBranch'], 'refs/tags/v'), succeeded())
+            pool:
+              name: Azure-Pipelines-1ESPT-ExDShared
+              os: linux
+              image: ubuntu-latest
+            templateContext:
+              type: releaseJob
+              isProduction: true
+              inputs:
+                - input: pipelineArtifact
+                  artifactName: jars
+                  targetPath: "$(Pipeline.Workspace)"
+            dependsOn: []
+            steps:
+              - task: EsrpRelease@7
+                inputs:
+                  connectedservicename: "Federated DevX ESRP Managed Identity Connection"
+                  keyvaultname: "akv-prod-eastus"
+                  authcertname: "ReferenceLibraryPrivateCert"
+                  signcertname: "ReferencePackagePublisherCertificate"
+                  clientid: "65035b7f-7357-4f29-bf25-c5ee5c3949f8"
+                  intent: "PackageDistribution"
+                  contenttype: "Maven"
+                  contentsource: "Folder"
+                  folderlocation: "$(Pipeline.Workspace)"
+                  waitforreleasecompletion: true
+                  owners: $(MAVEN_OWNERS_LIST)
+                  approvers: $(MAVEN_APPROVERS_LIST)
+                  serviceendpointurl: "https://api.esrp.microsoft.com"
+                  mainpublisher: "ESRPRELPACMAN"
+                  domaintenantid: "cdc5aeea-15c5-4db6-b079-fcadd2505dc2"
