ci: adds missing edit setting to github release
Signed-off-by: Vincent Biret <vibiret@microsoft.com>

--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -183,6 +183,7 @@ extends:
                         assets: |
                           $(Pipeline.Workspace)/**/*
                         addChangeLog: false
+                        action: edit
             
           - deployment: deploy_npm
             # condition: and(contains(variables['build.sourceBranch'], 'refs/tags/v'), succeeded())
