ci: adds missing environment
Signed-off-by: Vincent Biret <vibiret@microsoft.com>

--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -199,6 +199,7 @@ extends:
                   artifactName: jars
                   targetPath: "$(Pipeline.Workspace)"
             dependsOn: []
+            environment: maven_central
             strategy:
               runOnce:
                 deploy:
