ci: enables condition for github release
Signed-off-by: Vincent Biret <vibiret@microsoft.com>

--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -132,7 +132,7 @@ extends:
         dependsOn: build
         jobs:
           - deployment: deploy_github
-            # condition: and(contains(variables['build.sourceBranch'], 'refs/tags/v'), succeeded())
+            condition: and(contains(variables['build.sourceBranch'], 'refs/tags/v'), succeeded())
             pool:
               name: Azure-Pipelines-1ESPT-ExDShared
               os: linux
