ci: fixes mixed path separator
Signed-off-by: Vincent Biret <vibiret@microsoft.com>

--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -234,7 +234,7 @@ extends:
                         intent: "PackageDistribution"
                         contenttype: "Maven"
                         contentsource: "Folder"
-                        folderlocation: "$(Pipeline.Workspace)\\publishing"
+                        folderlocation: "$(Pipeline.Workspace)/publishing"
                         waitforreleasecompletion: true
                         owners: vibiret@microsoft.com
                         approvers: mmainer@microsoft.com
