ci: adds an output for the esrp zip
Signed-off-by: Vincent Biret <vibiret@microsoft.com>

--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -208,6 +208,9 @@ extends:
                 - input: pipelineArtifact
                   artifactName: jars
                   targetPath: "$(Pipeline.Workspace)"
+              outputs:
+                - output: maven_central
+                  value: "$(Pipeline.Workspace)/publishing/packages.zip"
             dependsOn: []
             environment: maven_central
             strategy:
@@ -224,21 +227,21 @@ extends:
                         New-Item "$(Pipeline.Workspace)\publishing" -ItemType Directory -Force -ErrorAction SilentlyContinue
                         Compress-Archive -Path "$(Pipeline.Workspace)\archiving\*" -DestinationPath "$(Pipeline.Workspace)\publishing\packages.zip"
                       displayName: Rezip artifacts in a single zip file
-                    - task: EsrpRelease@9
-                      inputs:
-                        connectedservicename: "Federated DevX ESRP Managed Identity Connection"
-                        usemanagedidentity: false
-                        keyvaultname: "akv-prod-eastus"
-                        authcertname: "ReferenceLibraryPrivateCert"
-                        signcertname: "ReferencePackagePublisherCertificate"
-                        clientid: "65035b7f-7357-4f29-bf25-c5ee5c3949f8"
-                        intent: "PackageDistribution"
-                        contenttype: "Maven"
-                        contentsource: "Folder"
-                        folderlocation: "$(Pipeline.Workspace)/publishing"
-                        waitforreleasecompletion: true
-                        owners: vibiret@microsoft.com
-                        approvers: mmainer@microsoft.com
-                        serviceendpointurl: "https://api.esrp.microsoft.com"
-                        mainpublisher: "ESRPRELPACMAN"
-                        domaintenantid: "cdc5aeea-15c5-4db6-b079-fcadd2505dc2"
+                    # - task: EsrpRelease@9
+                    #   inputs:
+                    #     connectedservicename: "Federated DevX ESRP Managed Identity Connection"
+                    #     usemanagedidentity: false
+                    #     keyvaultname: "akv-prod-eastus"
+                    #     authcertname: "ReferenceLibraryPrivateCert"
+                    #     signcertname: "ReferencePackagePublisherCertificate"
+                    #     clientid: "65035b7f-7357-4f29-bf25-c5ee5c3949f8"
+                    #     intent: "PackageDistribution"
+                    #     contenttype: "Maven"
+                    #     contentsource: "Folder"
+                    #     folderlocation: "$(Pipeline.Workspace)/publishing"
+                    #     waitforreleasecompletion: true
+                    #     owners: vibiret@microsoft.com
+                    #     approvers: mmainer@microsoft.com
+                    #     serviceendpointurl: "https://api.esrp.microsoft.com"
+                    #     mainpublisher: "ESRPRELPACMAN"
+                    #     domaintenantid: "cdc5aeea-15c5-4db6-b079-fcadd2505dc2"
