--- a/components/serialization/text/build.gradle
+++ b/components/serialization/text/build.gradle
@@ -102,6 +102,12 @@ publishing {
             }
         }
     }
+    repositories {
+        maven {
+            name = "ADO"
+            url = layout.buildDirectory.dir("publishing-repository")
+        }
+    }
 }
 
 signing {
